Updating for new JDK version and environment